--- a/.insomnia/RequestGroup/fld_51b27fe29b014a0284026d97bb5436b2.yml
+++ b/.insomnia/RequestGroup/fld_51b27fe29b014a0284026d97bb5436b2.yml
@@ -1,9 +1,9 @@
 _id: fld_51b27fe29b014a0284026d97bb5436b2
 type: RequestGroup
 parentId: fld_519d4477713f49a9a5333bd2f7c1e4ab
-modified: 1672049624194
+modified: 1672390305587
 created: 1672049619851
-name: receive
+name: receives
 description: ""
 environment: {}
 environmentPropertyOrder: null
