--- a/.insomnia/Request/req_f745d7f4701e4808bb10c251bc8e9ff6.yml
+++ b/.insomnia/Request/req_f745d7f4701e4808bb10c251bc8e9ff6.yml
@@ -1,7 +1,7 @@
 _id: req_f745d7f4701e4808bb10c251bc8e9ff6
 type: Request
 parentId: fld_222119fb925a46dc87f41563622eb95c
-modified: 1672069536401
+modified: 1673350521833
 created: 1672049619854
 url: "{{ _.baseUrl }}receive"
 name: create
@@ -11,25 +11,24 @@ body:
   mimeType: application/json
   text: |-
     {
-      "ownerId": "c1ddb801-56d1-d6b2-43a4-4c19b01f8529",
-      "ownerAccountId": "cbdc6046-fcc9-d5ae-eaca-01f325253793",
-      "name": "Conta de Luz",
-      "titleNumber": "01010101",
-      "invoice": "01010101",
-      "installmentNumber": "0",
-      "entryValue": 0,
-      "amount": 237.40,
-      "paidAmount": 0,
-      "originalValue": 237.40,
-      "balance": 237.40,
-      "description": "outro teste de conta a receber",
-      "receiverId": "",
-      "categoryId": "0f8568f7-dd90-5b81-06d7-a0ccc531015b",
-      "subCategoryId": "e68d6177-d1a5-2490-8f1f-5fd3e2487901",
-      "paymentFormId": "9e039651-e2d6-422b-6a8a-f4b0f6e85167",
-      "appellant": true,
-      "paid": true,
-      "monthly": true
+        "ownerId": "c1ddb801-56d1-d6b2-43a4-4c19b01f8529",
+        "ownerAccountId": "cbdc6046-fcc9-d5ae-eaca-01f325253793",
+        "name": "Matricula",
+        "titleNumber": "545454",
+        "installmentNumber": 1,
+        "invoice": "4545454",
+        "entryValue": 0,
+        "amount": 350,
+        "paidAmount": 0,
+        "originalValue": 350,
+        "balance": 0,
+        "categoryId": "d39e05fc-b1cf-04ba-94ee-043098e9a75d",
+        "subCategoryId": "097ef649-5200-483b-6475-a8553c73f48a",
+        "paymentFormId": "171afbc0-b44d-2806-275d-7e4eb87e74c0",
+        "appellant": false,
+        "paid": false,
+        "monthly": false,
+        "description": "Pagamento de Matricula"
     }
 parameters: []
 headers:
